@@ -1,8 +1,14 @@
 
-\version "2.7.39"
+\version "2.9.10"
+
 \header {
-  texidoc = "Automatic beaming works also in ternary time sigs."
+
+  texidoc = "Automatic beaming works also in ternary time sigs. In
+  this case, the 8th is a beat, so the 16ths are split into two
+  groups."
+
 }
+
 \layout { ragged-right = ##t}
 
 \relative c'' {
