@@ -19,6 +19,7 @@ struct Beam_rhythmic_element
   Drul_array<int> beam_count_drul_;
 
   Moment beat_start_;
+  Moment beat_length_;
   Moment group_start_;
   
   Beam_rhythmic_element (Moment, int);
