@@ -1,3 +1,10 @@
+2006-06-18  Han-Wen Nienhuys  <hanwen@lilypond.org>
+
+	* input/regression/beaming-ternary-metrum.ly: update doc.
+
+	* scm/music-functions.scm (make-time-signature-set): add
+	standard-beat-grouping. 
+
 2006-06-17  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
 	* input/regression/tie-whole.ly: new file.
